<resources>
    <string name="app_name">College</string>
    <string name="username">Name : </string>
    <string name="roll_number">Roll number : </string>
    <string name="email">Email : </string>
    <string name="password">Password : </string>
    <string name="cnfmpassword">Confirm Password : </string>
    <string name="choose_dept">Choose dept :</string>
    <string name="choose_year">Choose post : </string>
    <string name="cancel">Cancel</string>
    <string name="remember_me">Remember me</string>
    <string name="dashboard">Dashboard</string>
    <string name="attendance">Attendance</string>
    <string name="settings">Settings</string>
    <string name="update">Update</string>
    <string name="naviation">open navigation drawer</string>
    <string name="navclose">close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="space" />
</resources>